Update azure-pipelines.yml for Azure Pipelines

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -1,155 +1,15 @@
-# parameters:
-
-
-# - name: dzfBoolean
-#   type: boolean
-#   default: true
-# - name: dzfObject
-#   type: object
-#   default:
-#     foo: FOO
-#     bar: BAR
-#     things:
-#     - one
-#     - two
-#     - three
-#     nested:
-#       one: apple
-#       two: pear
-#       count: 3
-
-parameters :
-- name: dzfString
-  type: string
-  default: this is the default string
-- name: myMultiString
-  type: string
-  default: strings1
-  values:
-  - strings1
-  - strings2
-- name: dzfNumber
-  type: number
-  default: 3
-  values:
-    - 1
-    - 2
-    - 3
-    - 4
-    - 5
-- name: dzfBoolean
-  type: boolean
-  default: true
-- name: dzfObject
-  type: object
-  default:
-    foo: FOO
-    bar: BAR
-    things:
-    - one
-    - two
-    - three
-    nested:
-      one: apple
-      two: pear
-      count: 3
-- name: dzfStep
-  type: step
-  default: 
-    script: echo my is a step
-- name: dzfStepList
-  type: stepList
-  default:
-    - script: echo 1 step
-    - script: echo 2 step
-
+# File: azure-pipelines.yml
 trigger: none
 
-jobs:
-# - job : stepList
-#   steps: ${{ parameters.dzfStepList }}
-# - job : Step
-#   steps:
-#     - ${{ parameters.dzfStep }}
-
-- job : showNormalParam
-  steps:
-    - checkout: none
-    - bash : echo ${{ parameters.dzfString }};
-             echo ${{ parameters.myMultiString}};
-             echo ${{ parameters.dzfNumber }};
-             echo ${{ parameters.dzfBoolean }};
-             echo ${{ parameters.dzfObject.foo }};
-
-# - name: myStep
-#   type: step
-#   default:
-#     script: echo my step
-# - name: mySteplist
-#   type: stepList
-#   default:
-#     - script: echo step one
-#     - script: echo step two
-
-# trigger: none
-
-# jobs: 
-# - job: stepList
-#   steps: ${{ parameters.mySteplist }}
-# - job: myStep
-#   steps:
-#     - ${{ parameters.myStep }}
-
-# parameters:
-# - name: myString
-#   type: string
-#   default: a string
-# - name: myMultiString
-#   type: string
-#   default: default
-#   values:
-#   - default
-#   - ubuntu
-# - name: myNumber
-#   type: number
-#   default: 2
-#   values:
-#   - 1
-#   - 2
-#   - 4
-#   - 8
-#   - 16
-# - name: myBoolean
-#   type: boolean
-#   default: true
-# - name: myObject
-#   type: object
-#   default:
-#     foo: FOO
-#     bar: BAR
-#     things:
-#     - one
-#     - two
-#     - three
-#     nested:
-#       one: apple
-#       two: pear
-#       count: 3
-# - name: myStep
-#   type: step
-#   default:
-#     script: echo my step
-# - name: mySteplist
-#   type: stepList
-#   default:
-#     - script: echo step one
-#     - script: echo step two
-
-# trigger: none
-
-# jobs: 
-# - job: stepList
-#   steps: ${{ parameters.mySteplist }}
-# - job: myStep
-#   steps:
-#     - ${{ parameters.myStep }}
+extends:
+  template: start.yml
+  parameters:
+    buildSteps:  
+      - bash: echo Test #Passes
+        displayName: succeed
+      - bash: echo "Test"
+        displayName: succeed
+      - task: CmdLine@2
+        displayName: Test 3 - Will Fail
+        inputs:
+          script: echo "Script Test"
