Update azure-pipelines.yml for Azure Pipelines

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -1,15 +1,16 @@
 # File: azure-pipelines.yml
 trigger: none
 
+# azure-pipeline.yml
+
+resources:
+ containers:
+     - container: my-container
+       endpoint: my-service-connection
+       image: mycontainerimages
+
 extends:
-  template: start.yml
-  parameters:
-    buildSteps:  
-      - bash: echo Test #Passes
-        displayName: succeed
-      - bash: echo "Test"
-        displayName: succeed
-      - task: CmdLine@2
-        displayName: Test 3 - Will Fail
-        inputs:
-          script: echo "Script Test"
+    template: params.yml
+    parameters:
+        yesNo: true
+        image: 'windows-latest'
