Update azure-pipelines.yml for Azure Pipelines

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -10,7 +10,7 @@ trigger: none
 #        image: mycontainerimages
 
 extends:
-    template: params.yml
+    # template: params.yml
     parameters:
         yesNo: true
         image: 'windows-latest'
