--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -5,6 +5,7 @@ trigger: none
 # Delay further execution of a workflow by a fixed time
 jobs:
 - job: RunsOnServer
-  pool: Server
+  pool:
+    VmImage: "ubuntu-16.04"
   steps:
   - bash: echo "test"
