--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -28,3 +28,10 @@ steps:
   inputs:
     pathtoPublish: '$(Build.ArtifactStagingDirectory)' 
     artifactName: 'myWebsiteName'
+
+- task: DotNetCoreCLI@2
+  inputs:
+    command: publish
+    publishWebProjects: True
+    arguments: '--configuration $(BuildConfiguration) '
+    zipAfterPublish: True
