Update azure-pipelines.yml for Azure Pipelines

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -42,5 +42,5 @@ steps:
   inputs:
     azureSubscription: 'dzfenvironmenttest'
     appType: webAppLinux
-    appName: 'mywebapp'
+    appName: 'mywebappdzf'
     package: '**/*.zip'
