--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -26,17 +26,17 @@ steps:
     pathtoPublish: '$(Build.ArtifactStagingDirectory)' 
     artifactName: 'myWebsiteName'
 
-- task: DotNetCoreCLI@2
-  inputs:
-    command: publish
-    publishWebProjects: True
-    arguments: '--configuration $(BuildConfiguration) '
-    zipAfterPublish: True
+# - task: DotNetCoreCLI@2
+#   inputs:
+#     command: publish
+#     publishWebProjects: True
+#     arguments: '--configuration $(BuildConfiguration) '
+#     zipAfterPublish: True
 
-- task: AzureWebApp@1
-  displayName: 'Azure Web App Deploy'
-  inputs:
-    azureSubscription: 'pipelineenvtest'
-    appType: webAppLinux
-    appName: 'dzfwebtest20200430090607'
-    package: '**/*.zip'
+# - task: AzureWebApp@1
+#   displayName: 'Azure Web App Deploy'
+#   inputs:
+#     azureSubscription: 'pipelineenvtest'
+#     appType: webAppLinux
+#     appName: 'dzfwebtest20200430090607'
+#     package: '**/*.zip'
