Update azure-pipelines.yml for Azure Pipelines

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -26,10 +26,13 @@ steps:
     pathtoPublish: '$(Build.ArtifactStagingDirectory)' 
     artifactName: 'myWebsiteName'
 
-
-
-
-
+- task: AzureWebApp@1
+  displayName: 'Azure Web App Deploy'
+  inputs:
+    azureSubscription: 'pipelineenvtest'
+    appType: webAppLinux
+    appName: 'dzfwebtest20200430090607'
+    package: '**/*.zip'
 
 
 
