--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -12,7 +12,7 @@ jobs:
   pool:
     vmImage: 'Ubuntu-latest'
   # creates an environment if it doesn't exist
-  environment: 'plenv123'
+  environment: 'plenv'
   strategy:
     runOnce:
       deploy:
