Update azure-pipelines.yml for Azure Pipelines

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -2,3 +2,10 @@ trigger: none
 pool:
   vmImage: 'ubuntu-latest'
 
+stages:
+  - stage: 
+    jobs:
+      - job: A
+        steps:
+        - bash:  echo first
+      
