--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -1,11 +1,8 @@
 trigger: none
-pool:
-  vmImage: 'ubuntu-latest'
+- task: AzureCLI@2
+  inputs:
+    azureSubscription: '默认订阅(5c0108aa-9ca4-46f0-9ca1-690390568ec3)'
+    scriptType: 'pscore'
+    scriptLocation: 'inlineScript'
+    inlineScript: 'az version'
 
-stages:
-  - stage: 
-    jobs:
-      - job: A
-        steps:
-        - bash:  echo first
-      
