Update azure-pipelines.yml for Azure Pipelines

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -12,7 +12,7 @@ steps:
   - task: AzureCLI@2
     displayName: Azure CLI
     inputs:
-      azureSubscription: <Name of the Azure Resource Manager service connection>
+      azureSubscription: "shellcall"
       scriptType: ps
       scriptLocation: inlineScript
       inlineScript: |
