--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -10,21 +10,22 @@
 trigger: none
 
 steps:
-- task: AzureCLI@2
-  inputs:
-    azureSubscription: 'shellcall'
-    scriptType: 'pscore'
-    scriptLocation: 'scriptPath'
-    scriptPath: 'mytest.ps'
-  # - task: AzureCLI@2
-  #   displayName: Azure CLI
-  #   inputs:
-  #     azureSubscription: "shellcall"
-  #     scriptType: pscore
-  #     scriptLocation: inlineScript
-  #     inlineScript: |
-  #       ls
-  #       echo "******-----*******"
-  #       pwd
-  #       echo "******+++++*******"
+# - task: AzureCLI@2
+#   inputs:
+#     azureSubscription: 'shellcall'
+#     scriptType: 'pscore'
+#     scriptLocation: 'scriptPath'
+#     scriptPath: 'mytest.ps'
+  - task: AzureCLI@2
+    displayName: Azure CLI
+    inputs:
+      azureSubscription: "shellcall"
+      scriptType: pscore
+      scriptLocation: inlineScript
+      inlineScript: |
+        echo "******!!!-----*******"
+        ls /home/vsts/work/1/s/
+        echo "******-----*******"
+        pwd
+        echo "******+++++*******"
         
