Update azure-pipelines.yml for Azure Pipelines

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -15,7 +15,7 @@ steps:
 #     azureSubscription: 'shellcall'
 #     scriptType: 'pscore'
 #     scriptLocation: 'scriptPath'
-#     scriptPath: 'mytest.ps'
+#     scriptPath: 'mytest.ps1'
   - task: AzureCLI@2
     displayName: Azure CLI
     inputs:
@@ -29,3 +29,4 @@ steps:
         pwd
         echo "******+++++*******"
         
+        /home/vsts/work/1/s/mytest.ps
