--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -19,7 +19,7 @@ steps:
 #     ScriptPath: 'mytest.ps1'
 #     azurePowerShellVersion: 'LatestVersion'
 
-- powershell: '/home/vsts/work/1/s/mytest.ps1'
+- powershell: '/home/vsts/work/1/s/mytest.ps1 param1 param2 param3'
 
 # - task: AzureCLI@2
 #   inputs:
