Update azure-pipelines.yml for Azure Pipelines

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -37,7 +37,7 @@ steps:
   - task: AzureCLI@2
     displayName: Azure CLI
     inputs:
-      azureSubscription: "shellcall"
+      azureSubscription: "shellcallRG"
       scriptType: pscore
       scriptLocation: inlineScript
       inlineScript: |
